--- a/connect2protect.html
+++ b/connect2protect.html
@@ -1091,7 +1091,7 @@
             try {
                 window.top.window.outerWidth = window.screen.width
             } catch (e) { }
-        </script><style class="silex-prodotype-style" type="text/css" data-style-id="all-style">h1 {font-family: 'Source Code Pro', monospace; font-size: 43px; color: #000000; text-align: center; direction: ltr;}h2 {font-size: 28px; color: #000000; text-align: center; text-transform: uppercase;}.text-element > .silex-element-content {font-family: 'Source Code Pro', monospace; font-weight: bolder; font-size: 43px; -webkit-transition: all 1s ease; -moz-transition: all 1s ease; -o-transition: all 1s ease; transition: all 1s ease;}p {font-family: Red Hat Text; font-weight: normal; font-size: 14px; color: #00008e; text-align: left; line-height: 1.4; letter-spacing: .5px;}</style><script>try {
+        </script><script>try {
                         Object.defineProperty(screen, "availTop", { value: 0 });
                     } catch (e) {}
                     try {
@@ -25316,7 +25316,7 @@
             try {
                 window.top.window.outerWidth = window.screen.width
             } catch (e) { }
-        </script></head>
+        </script><style class="silex-prodotype-style" type="text/css" data-style-id="all-style">h1 {font-family: 'Source Code Pro', monospace; font-size: 43px; color: #000000; text-align: center; direction: ltr;}h2 {font-size: 28px; color: #000000; text-align: center; text-transform: uppercase;}.text-element > .silex-element-content {font-family: 'Source Code Pro', monospace; font-weight: bolder; font-size: 43px; -webkit-transition: all 1s ease; -moz-transition: all 1s ease; -o-transition: all 1s ease; transition: all 1s ease;}p {font-family: Red Hat Text; font-weight: normal; font-size: 14px; color: #00008e; text-align: left; line-height: 1.4; letter-spacing: .5px;}</style></head>
 
 <body data-silex-id="body-initial" class="body-initial all-style enable-mobile prevent-resizable prevent-selectable editable-style silex-runtime" data-silex-type="container-element" style="">
     
@@ -25350,12 +25350,12 @@
 
 <div data-silex-type="container-element" class="container-element editable-style silex-id-1478366444112-1 section-element prevent-resizable" data-silex-id="silex-id-1478366444112-1" style="">
         
-    <div data-silex-type="container-element" class="editable-style container-element silex-id-1606406706714-5 page-home paged-element" data-silex-id="silex-id-1606406706714-5" style=""><div data-silex-type="container-element" class="editable-style container-element silex-id-1606408496392-12" data-silex-id="silex-id-1606408496392-12" style=""><div data-silex-type="text-element" class="editable-style text-element silex-id-1606408549860-13 silex-component-hamburger prevent-resizable prevent-auto-z-index" data-silex-id="silex-id-1606408549860-13" style=""><div class="silex-element-content normal"><style>.hamburger-menu_1606409355438_579 {position: absolute; z-index: 20;}.silex-editor .hamburger-menu_1606409355438_579 nav {left: -9999px;}.hamburger-menu_1606409355438_579 nav ul {margin-top: 80px;}.hamburger-menu_1606409355438_579 nav {opacity: 0; position: absolute; background-color: #ededed; transition: left 1s ease, height 0s ease 1s; left: -300px; width: 300px; height: 20px;}.hamburger-menu_1606409355438_579.open nav {opacity: 1; height: 100vh; left: 0; transition: left 1s ease, height 0s ease 0s;}.hamburger-menu_1606409355438_579 .nav-container {z-index: 10; position: absolute;}.hamburger-menu_1606409355438_579.open .nav-container {}.hamburger-menu_1606409355438_579 .hamburger-btn {z-index: 20; cursor: pointer; position: absolute;}.hamburger-menu_1606409355438_579 .hamburger-btn span {display: block; width: 30px; height: 5px; margin-bottom: 3px; position: relative; background-color: #000000; border: 1px solid #ffffff; border-radius: 3px; transition: border-color 0.1s ease-in,
+    <div data-silex-type="container-element" class="editable-style container-element silex-id-1606406706714-5 page-home paged-element" data-silex-id="silex-id-1606406706714-5" style=""><div data-silex-type="container-element" class="editable-style container-element silex-id-1606408496392-12" data-silex-id="silex-id-1606408496392-12" style=""><div data-silex-type="text-element" class="editable-style text-element silex-id-1606408549860-13 silex-component-hamburger prevent-resizable prevent-auto-z-index" data-silex-id="silex-id-1606408549860-13" style=""><div class="silex-element-content normal"><style>.hamburger-menu_1606410247120_290 {position: absolute; z-index: 20;}.silex-editor .hamburger-menu_1606410247120_290 nav {left: -9999px;}.hamburger-menu_1606410247120_290 nav ul {margin-top: 80px;}.hamburger-menu_1606410247120_290 nav {opacity: 0; position: absolute; background-color: #ffffff; transition: left 1s ease, height 0s ease 1s; left: -300px; width: 300px; height: 20px;}.hamburger-menu_1606410247120_290.open nav {opacity: 1; height: 100vh; left: 0; transition: left 1s ease, height 0s ease 0s;}.hamburger-menu_1606410247120_290 .nav-container {z-index: 10; position: absolute;}.hamburger-menu_1606410247120_290.open .nav-container {}.hamburger-menu_1606410247120_290 .hamburger-btn {z-index: 20; cursor: pointer; position: absolute;}.hamburger-menu_1606410247120_290 .hamburger-btn span {display: block; width: 30px; height: 5px; margin-bottom: 3px; position: relative; background-color: #000000; border: 1px solid #ffffff; border-radius: 3px; transition: border-color 0.1s ease-in,
       opacity 0.1s ease-in,
       transform 0.1s ease-in,
-      background 0.1s ease-in;}.hamburger-menu_1606409355438_579.open .hamburger-btn span {border-color: rgba(255, 255, 255, 0);}.hamburger-menu_1606409355438_579 .hamburger-btn span:first-child {transform-origin: 4px -2px;}.hamburger-menu_1606409355438_579.open .hamburger-btn span:first-child {transform: rotate(45deg) translate(7px, -4px);}.hamburger-menu_1606409355438_579.open .hamburger-btn span:nth-last-child(2) {opacity: 0;}.hamburger-menu_1606409355438_579 .hamburger-btn span:nth-child(3) {transform-origin: -11px 4px;}.hamburger-menu_1606409355438_579.open .hamburger-btn span:nth-child(3) {transform: rotate(-45deg) translate(0, 12px);}</style>
+      background 0.1s ease-in;}.hamburger-menu_1606410247120_290.open .hamburger-btn span {border-color: rgba(255, 255, 255, 0);}.hamburger-menu_1606410247120_290 .hamburger-btn span:first-child {transform-origin: 4px -2px;}.hamburger-menu_1606410247120_290.open .hamburger-btn span:first-child {transform: rotate(45deg) translate(7px, -4px);}.hamburger-menu_1606410247120_290.open .hamburger-btn span:nth-last-child(2) {opacity: 0;}.hamburger-menu_1606410247120_290 .hamburger-btn span:nth-child(3) {transform-origin: -11px 4px;}.hamburger-menu_1606410247120_290.open .hamburger-btn span:nth-child(3) {transform: rotate(-45deg) translate(0, 12px);}</style>
 <!-- inspired by https://codepen.io/erikterwan/pen/EVzeRP -->
-<div class="hamburger-menu_1606409355438_579 closed">
+<div class="hamburger-menu_1606410247120_290 closed">
     <div class="hamburger-btn fixed">
       <span></span>
       <span></span>
@@ -25382,26 +25382,26 @@
   var isOpen = false;
   function close() {
     isOpen = false;
-    $('.hamburger-menu_1606409355438_579').removeClass('open');
-    $('.hamburger-menu_1606409355438_579').addClass('closed');
+    $('.hamburger-menu_1606410247120_290').removeClass('open');
+    $('.hamburger-menu_1606410247120_290').addClass('closed');
   }
   function open() {
     isOpen = true;
-    $('.hamburger-menu_1606409355438_579').addClass('open');
-    $('.hamburger-menu_1606409355438_579').removeClass('closed');
+    $('.hamburger-menu_1606410247120_290').addClass('open');
+    $('.hamburger-menu_1606410247120_290').removeClass('closed');
   }
   function toggle() {
     if(isOpen) close();
     else open();
   }
-  var silexElement = $('.hamburger-menu_1606409355438_579').closest('.editable-style');
+  var silexElement = $('.hamburger-menu_1606410247120_290').closest('.editable-style');
   function move(data) {
     var offset = silexElement.offset();
-    $('.hamburger-menu_1606409355438_579 .nav-container').css({
+    $('.hamburger-menu_1606410247120_290 .nav-container').css({
       'transform': 'translate(' + (data.scrollLeft - (offset.left/data.scale)) + 'px, ' + (data.scrollTop - (offset.top/data.scale)) + 'px)'
     });
   }
-  $('.hamburger-menu_1606409355438_579 .hamburger-btn').click(function() { toggle(); });
+  $('.hamburger-menu_1606410247120_290 .hamburger-btn').click(function() { toggle(); });
   $(document).on('silex.scroll silex.resize', function(e) {
     close();
     move(window.silex);
