--- a/index.html
+++ b/index.html
@@ -164,14 +164,7 @@ collection protection.<br>
 
 
 
-</div></div></div></div></div><div data-silex-type="container-element" class="container-element editable-style silex-id-1478366450713-3 section-element prevent-resizable" style="">
-        <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1478366450713-2 container-element website-width" style="">
-
-            
-        </div>
-    </div><div data-silex-type="container-element" class="editable-style section-element silex-id-1606427280283-54"><div data-silex-type="container-element" class="editable-style container-element silex-id-1606427280283-55 silex-element-content website-width prevent-draggable" style=""><div class="editable-style silex-id-1442914737143-3 text-element" data-silex-type="text-element" style="">
-                <div class="silex-element-content normal"><p>Powered by <a href="https://www.silex.me/" target="_blank" title="Silex website builder,  free and open source" linktype="LinkTypeExternal">Silex website builder</a></p></div>
-            </div><a href="https://www.msvuart.ca/about/news/" data-silex-type="image-element" class="editable-style image-element silex-id-1606427255987-53" style=""><img src="assets/Capture.PNG"></a><div data-silex-type="html-element" class="editable-style html-element silex-id-1606428501680-56 silex-component-share" style=""><div class="silex-element-content">
+</div></div></div></div></div><div data-silex-type="container-element" class="editable-style section-element silex-id-1606427280283-54"><div data-silex-type="container-element" class="editable-style container-element silex-id-1606427280283-55 silex-element-content website-width prevent-draggable" style=""><a href="https://www.msvuart.ca/about/news/" data-silex-type="image-element" class="editable-style image-element silex-id-1606427255987-53" style=""><img src="assets/Capture.PNG"></a><div data-silex-type="html-element" class="editable-style html-element silex-id-1606428501680-56 silex-component-share" style=""><div class="silex-element-content">
 <ul class="share-buttons" id="id_1606431981874_372">
   
   <li><a href="https://www.facebook.com/sharer/sharer.php?u=http://www.connect-protect.com&amp;t=Connect to Protect " title="Share on Facebook" target="_blank"><img alt="Share on Facebook" src="assets/Facebook.png"></a></li>
@@ -201,4 +194,6 @@ light-hearted manner. Users can access the information
 </ul>
 
 <style type="text/css">#id_1606431981874_372.share-buttons {list-style: none; padding: 0;}#id_1606431981874_372.share-buttons li {display: inline;}#id_1606431981874_372.share-buttons .sr-only {position: absolute; clip: rect(1px, 1px, 1px, 1px); padding: 0; border: 0; height: 1px; width: 1px; overflow: hidden;}</style>
-</div></div></div></div></body></html>
+</div></div><div class="editable-style silex-id-1442914737143-3 text-element" data-silex-type="text-element" style="">
+                <div class="silex-element-content normal"><p>Powered by <a href="https://www.silex.me/" target="_blank" title="Silex website builder,  free and open source" linktype="LinkTypeExternal">Silex website builder</a></p></div>
+            </div></div></div></body></html>
